--- a/Consultorio/WebContent/paciente.xhtml
+++ b/Consultorio/WebContent/paciente.xhtml
@@ -28,20 +28,30 @@
 </style>
 	</ui:define>
 	<ui:define name="content">
-		<h:form>
+		<p:ajaxStatus onstart="PF('statusDialog').show()"
+			onsuccess="PF('statusDialog').hide()" />
 
+		<p:dialog widgetVar="statusDialog" modal="true" draggable="false"
+			closable="false" resizable="false" showHeader="false">
+			<p:graphicImage name="/images/loading.gif" />
+		</p:dialog>
+
+
+		<h:form>
+			<p:growl id="growl" globalOnly="false" />
 			<p:panel id="panel">
 				<f:facet name="header">
 					<div align="center">
 						<h1>Cadastro do Paciente</h1>
 					</div>
 				</f:facet>
-				<div class="ui-fluid">
-					<div class="ui-fluid">
-						<div class="card card-w-title">
+				<div class="ui-g ui-fluid  ">
+					<div class="ui-g-12">
+						<div class="card card-w-title  ">
+
 							<p:panelGrid columns="2"
-								columnClasses="ui-g-12 ui-md-2,ui-g-12 ui-md-4,ui-g-12 ui-md-2,ui-g-12 ui-md-4"
-								layout="grid" styleClass="ui-panelgrid-blank ui-fluid">
+								columnClasses="ui-g-12 ui-md-1"
+								layout="grid" styleClass="ui-panelgrid-blank ui-fluid  ">
 
 
 
@@ -49,8 +59,8 @@
 									<p:message for="itNome" escape="false" />
 								</p:commandLink>
 								<p:inputText id="itNome"
-									value="#{pacienteController.entity.nome}" />
-
+									value="#{pacienteController.entity.nome}" required="true"
+									requiredMessage="Informe o nome." />
 
 								<p:outputLabel value="Email:" />
 								<p:inputText value="#{pacienteController.entity.email}" />
@@ -73,25 +83,29 @@
 					</div>
 				</div>
 
-				<p:toolbar>
-					<f:facet name="left">
-						<p:commandButton value="Salvar" icon="pi pi-check" process="@form"
-							update="@form" action="#{pacienteController.salvar}" />
+				<div class="ui-button ui-state-hover   ">
+					<p:toolbar>
+						<f:facet name="left">
+							<p:commandButton value="Salvar" icon="pi pi-check"
+								process="@form" update="@form"
+								action="#{pacienteController.salvar}" />
 
-						<p:commandButton value="Limpar" process="@this" update="panel"
-							action="#{pacienteController.limpar}">
-						</p:commandButton>
+							<p:commandButton value="Limpar" process="@this" update="panel"
+								action="#{pacienteController.limpar}">
+								<p:ajax update="@form" resetValues="true" />
+							</p:commandButton>
 
-					</f:facet>
+						</f:facet>
 
-					<f:facet name="right">
-						<p:commandButton value="Excluir" icon="pi pi-trash"
-							process="@form" update="panel"
-							action="#{pacienteController.excluir}">
-							<p:confirm header="Confirmação" message="Confirma a exclusão?" />
-						</p:commandButton>
-					</f:facet>
-				</p:toolbar>
+						<f:facet name="right">
+							<p:commandButton value="Excluir" icon="pi pi-trash"
+								process="@form" update="panel"
+								action="#{pacienteController.excluir}">
+								<p:confirm header="Confirmação" message="Confirma a exclusão?" />
+							</p:commandButton>
+						</f:facet>
+					</p:toolbar>
+				</div>
 			</p:panel>
 
 			<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
@@ -109,6 +123,7 @@
 					actionListener="#{pacienteController.pesquisar}"
 					process="@this itFiltro" update="dtListagem" />
 				<br />
+				<div class="ui-datatable"></div>
 				<p:dataTable id="dtListagem" var="entity"
 					value="#{pacienteController.listaPaciente}">
 					<p:column headerText="Id">
@@ -123,10 +138,6 @@
 
 					<p:column headerText="E-Mail">
 						<h:outputText value="#{entity.email}" />
-					</p:column>
-
-					<p:column headerText="Senha">
-						<h:outputText value="#{entity.senha}" />
 					</p:column>
 
 					<p:column headerText="Cpf">
