--- a/Consultorio/WebContent/login.xhtml
+++ b/Consultorio/WebContent/login.xhtml
@@ -76,7 +76,7 @@
 						<f:facet name="left">
 							<p:commandButton value="Entrar" icon="pi pi-check"
 								process="@form" update="@form"
-								action="#{loginController.salvar}" />
+								action="#{loginController.login()}" />
 
 						</f:facet>
 
