--- a/WebContent/medico.xhtml
+++ b/WebContent/medico.xhtml
@@ -45,12 +45,13 @@
 						<h1>Cadastro do Médico</h1>
 					</div>
 				</f:facet>
-				<div class="ui-g ui-fluid  ">
+				<div class="ui-g ui-fluid">
 					<div class="ui-g-12">
 						<div class="card card-w-title  ">
 
 							<p:panelGrid columns="2" columnClasses="ui-g-12 ui-md-1"
-								layout="grid" styleClass="ui-panelgrid-blank ui-fluid">
+								layout="grid" styleClass="ui-panelgrid-blank ui-fluid"
+								id="painelGrid">
 
 
 
@@ -58,10 +59,10 @@
 									<p:message for="itNome" escape="false" />
 								</p:commandLink>
 								<p:inputText id="itNome" value="#{medicoController.entity.nome}"
-									required="true" requiredMessage="Informe o nome." />
+									required="true" requiredMessage="Informe o nome."/>
 
 								<p:outputLabel value="Email:" />
-								<p:inputText value="#{medicoController.entity.email}" />
+								<p:inputText value="#{medicoController.entity.email}" id="email"/>
 
 								<p:outputLabel value="Senha:" for="pwd" />
 								<p:password id="pwd" value="#{medicoController.entity.senha}"
@@ -69,14 +70,21 @@
 									goodLabel="Senha razoavel" strongLabel="Senha forte"
 									promptLabel="Informe uma senha" match="pwd2" required="true"
 									requiredMessage="A senha é obrigatória"
-									validatorMessage="As senhas estão diferentes" />
+									validatorMessage="As senhas estão diferentes"
+									redisplay="true" />
 
 								<p:outputLabel value="Confirmar Senha:" for="pwd2" />
-								<p:password id="pwd2" feedback="false" required="true" />
+								<p:password id="pwd2" feedback="false" required="true"
+								redisplay="true"> 
+								
+								<p:ajax event="change" process="itNome email pwd pwd2" update="@form" />
+								
+								</p:password>
 
 								<p:outputLabel value="Data de Aniversário:" />
 								<p:calendar value="#{medicoController.entity.dataAniversario}"
-									pattern="dd/MM/yyyy" />
+									pattern="dd/MM/yyyy"
+									required="true"/>
 
 								<p:outputLabel value="CPF:" />
 								<p:inputText value="#{medicoController.entity.cpf}" />
