--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -1,92 +1,103 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui"
-	template="/WEB-INF/template/template.xhtml">
-	<ui:define name="head">
-		<style type="text/css">
-.ui-panelgrid.form-elements .ui-grc-2 {
-	padding-left: 60px;
+<!DOCTYPE html>
+<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:p="http://primefaces.org/ui">
+<h:head>
+	<title>Login</title>
+	<style type="text/css">
+body {
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+	background: #dfe6e9;
 }
 
-@media ( max-width :1024px) {
-	.ui-panelgrid.form-elements .ui-grc-2 {
-		padding-left: 20px;
-	}
+.box {
+	width: 25%;
+	padding: 40px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background: #a29bfe;
+	text-align: center;
 }
 
-@media ( max-width :640px) {
-	.ui-panelgrid.form-elements .ui-grc-2 {
-		padding-left: 6px;
-	}
+.box h1 {
+	color: black;
+	text-transform: uppercase;
+	font-weight: 700;
 }
 
-.dialogDemo label {
-	line-height: 2.1em;
+.box input[type="text"], .box input[type="password"] {
+	border: 0;
+	background: none;
+	display: block;
+	margin: 20px auto;
+	text-align: center;
+	border: 2px solid #2d3436;
+	padding: 14px 10px;
+	width: 200px;
+	outline: none;
+	color: white;
+	border-radius: 24px;
+	transition: 0.25s;
+}
+
+.box input[type="text"]:focus, .box input[type="password"]:focus {
+	width: 280px;
+	border-color: #2d3436;
+}
+
+.box input[type="submit"] {
+	border: 0;
+	background: none;
+	display: block;
+	margin: 20px auto;
+	text-align: center;
+	border: 2px solid #2ecc71;
+	padding: 14px 40px;
+	outline: none;
+	color: white;
+	border-radius: 24px;
+	transition: 0.25s;
+	cursor: pointer;
+}
+
+.box input[type="submit"]:hover {
+	background: #2ecc71;
 }
 </style>
-	</ui:define>
-	<ui:define name="content">
-		<p:ajaxStatus onstart="PF('statusDialog').show()"
-			onsuccess="PF('statusDialog').hide()" />
+</h:head>
+<h:body>
 
-		<p:dialog widgetVar="statusDialog" modal="true" draggable="false"
-			closable="false" resizable="false" showHeader="false">
-			<p:graphicImage name="/images/loading.gif" />
-		</p:dialog>
+	<p:ajaxStatus onstart="PF('statusDialog').show()"
+		onsuccess="PF('statusDialog').hide()" />
 
+	<p:dialog widgetVar="statusDialog" modal="true" draggable="false"
+		closable="false" resizable="false" showHeader="false">
+		<p:graphicImage name="/images/loading.gif" />
+	</p:dialog>
 
-		<h:form>
-			<p:growl id="growl" globalOnly="false" />
-			<p:panel id="panel">
-				<f:facet name="header">
-					<div align="center">
-						<h1>Área de login </h1>
-					</div>
-				</f:facet>
-				<div class="ui-g ui-fluid  ">
-					<div class="ui-g-12">
-						<div class="card card-w-title  ">
+	<h:form class="box">
+		<p:growl id="growl" globalOnly="false" />
 
-							<p:panelGrid columns="2" columnClasses="ui-g-12 ui-md-1"
-								layout="grid" styleClass="ui-panelgrid-blank ui-fluid">
+		<h1>Login</h1>
+		
+		<p:inputText id="itEmail" value="#{loginController.entity.email}"
+			required="true" requiredMessage="Informe o email"
+			placeholder="usuario" />
+			
+		<p:password id="pwd" value="#{loginController.entity.senha}"
+			required="true" requiredMessage="Informe a senha" placeholder="senha" />
 
 
+		<h:commandButton value="Entrar" icon="pi pi-check" process="@form"
+			update="@form" action="#{loginController.logar()}" />
 
-							
-								<p:outputLabel value="Email:">
-								<p:message for="itEmail" escape="false"/>
-								</p:outputLabel>
-								<p:inputText id="itEmail" value="#{loginController.entity.email}"
-								required="true" requiredMessage="Informe o email" />
-
-								<p:outputLabel value="Senha:" for="pwd" />
-								<p:password id="pwd" value="#{loginController.entity.senha}" 
-								required="true" requiredMessage="Inforeme a senha"/>
-
-							</p:panelGrid>
-
-						</div>
-					</div>
-				</div>
-
-				<div class="ui-button ui-state-hover   ">
-					<p:toolbar>
-						<f:facet name="left">
-							<p:commandButton value="Entrar" icon="pi pi-check"
-								process="@form" update="@form"
-								action="#{loginController.logar()}" />
-
-						</f:facet>
-
-					</p:toolbar>
-				</div>
-
-			</p:panel>
+	</h:form>
 
 
-
-		</h:form>
-	</ui:define>
-</ui:composition>
+</h:body>
+</html>
