--- a/WebContent/pacientelisting.xhtml
+++ b/WebContent/pacientelisting.xhtml
@@ -56,18 +56,21 @@
 								</p:column>
 			
 								<p:column headerText="Nome">
-									<p:commandLink value="#{entity.nome}"
-										actionListener="#{pacienteListing.select(entity.id)}" 
-										process="@this" update="@form" resetValues="true"/>
+									<h:outputLabel value="#{entity.nome}" />
 								</p:column>
 			
 								<p:column headerText="Email">
-									<p:commandLink value="#{entity.email}"
-										actionListener="#{pacienteListing.select(entity.id)}" 
-										process="@this" update="@form" resetValues="true"/>
+									<h:outputLabel value="#{entity.email}" />
 								</p:column>
-			
-								<f:facet name="footer">
+
+								<p:column headerText="Editar">
+									<p:commandLink value="Editar"
+									rendered="#{loginController.verificaUser(entity.id)}"
+									actionListener="#{pacienteListing.select(entity.id)}"
+									process="@this" update="@form" resetValues="true" />
+								</p:column>
+
+							<f:facet name="footer">
 							        Total de #{pacienteListing.list.size()} Pacientes.
 							    </f:facet>
 							</p:dataTable>
