--- a/WebContent/paciente.xhtml
+++ b/WebContent/paciente.xhtml
@@ -114,8 +114,9 @@
 						<f:facet name="left">
 							<p:commandButton value="Salvar" icon="pi pi-check"
 								process="@form" update="@form"
-								action="#{pacienteController.salvar}"
-								rendered="#{loginController.verificaUser(entity.id)}"/>
+								disabled="#{loginController.permiteAcesso('Adm-Paciente') == false
+								|| loginController.verificaUser(pacienteController.entity.id) == false}"
+								action="#{pacienteController.salvar}" />
 
 							<p:commandButton value="Limpar" process="@this" update="panel"
 								action="#{pacienteController.limpar}">
