--- a/WebContent/medico.xhtml
+++ b/WebContent/medico.xhtml
@@ -105,7 +105,8 @@
 
 								</p:commandLink>
 								<p:inputText id="itespecialidade"
-									value="#{medicoController.entity.especialidade.nome}"
+									value="#{medicoController.entity.especialidade.nome}" 
+									disabled="true"
 									required="true" requiredMessage="Selecione a especialidade" />
 							</p:panelGrid>
 
