--- a/WebContent/cadastroMedico.xhtml
+++ b/WebContent/cadastroMedico.xhtml
@@ -81,7 +81,7 @@
 
 								</p:commandLink>
 								<p:inputText id="itespecialidade"
-									value="#{medicoController.entity.especialidade.nome}"
+									value="#{medicoController.entity.medico.especialidade.nome}"
 									required="true" requiredMessage="Selecione a especialidade" 
 									disabled="true"/>
 
