--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -20,8 +20,9 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	background: #a29bfe;
+	background: #FFFFFF;
 	text-align: center;
+	border-radius: 8px;
 }
 
 .box h1 {
@@ -41,8 +42,8 @@
 	width: 200px;
 	outline: none;
 	color: white;
-	border-radius: 24px;
 	transition: 0.25s;
+	border-radius: 8px;
 }
 
 .box input[type="text"]:focus, .box input[type="password"]:focus {
@@ -52,21 +53,20 @@
 
 .box input[type="submit"] {
 	border: 0;
-	background: none;
+	background: blue;
 	display: block;
 	margin: 20px auto;
 	text-align: center;
-	border: 2px solid #2ecc71;
 	padding: 14px 40px;
 	outline: none;
 	color: white;
-	border-radius: 24px;
 	transition: 0.25s;
 	cursor: pointer;
+	border-radius: 8px;
 }
 
 .box input[type="submit"]:hover {
-	background: #2ecc71;
+	background: #3162C3;
 }
 
 .bor input[type="submit"] {
@@ -74,18 +74,18 @@
 	background: none;
 	display: block;
 	float: right;
-	text-align: center;
-	border: 2px solid #2ecc71;
+	text-align: center;    /*#######################################################*/
 	padding: 14px 25px;
 	outline: none;
 	color: black;
-	border-radius: 24px;
 	transition: 0.25s;
 	cursor: pointer;
+	border-radius: 8px;
+	border: 2px solid blue;
 }
 
 .bor input[type="submit"]:hover {
-	background: #2ecc71;
+	background: #3162C3;
 }
 
 
@@ -113,7 +113,6 @@
 	width: 200px;
 	outline: none;
 	color: white;
-	border-radius: 24px;
 	transition: 0.25s;
 }
 
@@ -132,7 +131,6 @@
 	padding: 14px 40px;
 	outline: none;
 	color: white;
-	border-radius: 24px;
 	transition: 0.25s;
 	cursor: pointer;
 }
@@ -151,7 +149,6 @@
 	padding: 14px 25px;
 	outline: none;
 	color: black;
-	border-radius: 24px;
 	transition: 0.25s;
 	cursor: pointer;
 } 
