--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -41,7 +41,7 @@
 	padding: 14px 10px;
 	width: 200px;
 	outline: none;
-	color: white;
+	color: black;
 	transition: 0.25s;
 	border-radius: 8px;
 }
@@ -49,6 +49,7 @@
 .box input[type="text"]:focus, .box input[type="password"]:focus {
 	width: 280px;
 	border-color: #2d3436;
+	color: black;
 }
 
 .box input[type="submit"] {
