--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -31,7 +31,7 @@
 
 		<h:body>
 			<h:form>			
-				<h:outputText value="Seja bem vindo #{sessionScope.usuarioLogado.nome} !!!" />
+				<h1><h:outputText value="Seja bem vindo #{sessionScope.usuarioLogado.nome} !!!" /></h1>
 				<br/>
 			</h:form>
 		</h:body>
