--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -6,11 +6,11 @@
 <h:head>
 	<title>Login</title>
 	<style type="text/css">
-   		body {
+body {
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
-	background: #dfe6e9;
+	background: #383636;
 }
 
 .box {
@@ -48,13 +48,13 @@
 
 .box input[type="text"]:focus, .box input[type="password"]:focus {
 	width: 280px;
-	border-color: #2d3436;
+	border-color: #FF8F00;
 	color: black;
 }
 
 .box input[type="submit"] {
 	border: 0;
-	background: blue;
+	background: #FFA000;
 	display: block;
 	margin: 20px auto;
 	text-align: center;
@@ -67,7 +67,7 @@
 }
 
 .box input[type="submit"]:hover {
-	background: #3162C3;
+	background: #FF8F00;
 }
 
 .bor input[type="submit"] {
@@ -75,25 +75,23 @@
 	background: none;
 	display: block;
 	float: right;
-	text-align: center;    /*#######################################################*/
+	text-align: center;
+	/*#######################################################*/
 	padding: 14px 25px;
 	outline: none;
-	color: black;
+	color: white;
 	transition: 0.25s;
 	cursor: pointer;
 	border-radius: 8px;
-	border: 2px solid blue;
+	border: 2px solid #FFA000;
 }
 
 .bor input[type="submit"]:hover {
-	background: #3162C3;
+	background: #FF8F00;
 }
 
-
-<!-- CADASTRO -->
-
-.cad {
-
+<!--
+CADASTRO -->.cad {
 	text-align: center;
 }
 
@@ -152,8 +150,8 @@
 	color: black;
 	transition: 0.25s;
 	cursor: pointer;
-} 
-  </style>
+}
+</style>
 </h:head>
 <h:body>
 
@@ -195,6 +193,6 @@
 			</div>
 		</div>
 	</h:form>
-	
+
 </h:body>
 </html>
