--- a/WebContent/examePaciente.xhtml
+++ b/WebContent/examePaciente.xhtml
@@ -37,6 +37,7 @@
 		</p:dialog>
 
 		<p:growl id="growl" globalOnly="false" />
+		
 		<p:panel id="panel">
 			<f:facet name="header">
 				<div align="left">
@@ -46,11 +47,11 @@
 			</f:facet>
 
 			<h:form id="formGeral">
-				<p:growl id="msgs" showDetail="true"
-					skipDetailIfEqualsSummary="true" />
 				<p:accordionPanel>
 					<p:tab title="Novo exame">
 						<p:panel id="panelExame">
+							<p:growl id="msgs" showDetail="true"
+								skipDetailIfEqualsSummary="true" />
 
 							<h:panelGrid columns="2" cellpadding="10">
 
@@ -76,104 +77,101 @@
 
 							<p:toolbar>
 								<f:facet name="left">
-									<h:commandButton value="Salvar" process="panelExame"
+									<p:commandButton value="Salvar" process="panelExame"
 										update="panelExame" id="salvarExame"
 										action="#{pacienteController.salvarExame}" />
 
-									<h:commandButton value="Limpar" process="panelExame"
+									<p:commandButton value="Limpar" process="panelExame"
 										update="panelExame" id="limpar"
 										action="#{pacienteController.limparExame}" />
-
-
 
 								</f:facet>
 							</p:toolbar>
 
 						</p:panel>
-
-						<p:dialog header="Listagem de Medicos" widgetVar="listagem"
-							height="300" width="90%" modal="true" resizable="true">
-
-							<p:outputLabel value="Nome: " />
-							<p:inputText id="itFiltro" value="#{pacienteController.filtro}" />
-							<p:commandButton value="Pesquisar"
-								actionListener="#{pacienteController.pesquisarMed}"
-								process="@this itFiltro" update="dtListagem" />
-							<br />
-							<div class="ui-datatable"></div>
-							<p:dataTable id="dtListagem" var="entity"
-								value="#{pacienteController.listaMedico}">
-								<p:column headerText="Id">
-									<h:outputText value="#{entity.id}" />
-								</p:column>
-
-								<p:column headerText="Nome">
-									<h:outputText value="#{entity.nome}" />
-								</p:column>
-
-								<p:column headerText="Especialiade(s)">
-									<p:outputLabel id="dtListagem"
-										value="#{pacienteController.retornarEspecialidadesPorId(entity.id)}" />
-								</p:column>
-
-								<p:column headerText="Ação">
-									<p:commandLink value="Selecionar"
-										actionListener="#{pacienteController.editarMed(entity.id)}"
-										process="@this" update="@form" resetValues="true" />
-								</p:column>
-
-							</p:dataTable>
-						</p:dialog>
-
-						<p:dialog header="Agenda medica" widgetVar="AgendaMed"
-							height="50%" width="50%" modal="true" resizable="true">
-
-							<h:form id="agenda">
-								<p:growl id="messages" showDetail="true" />
-
-								<h:panelGrid columnClasses="value">
-									<p:schedule id="schedule" value="#{agendaController.agendas}"
-										widgetVar="myschedule">
-
-										<p:ajax event="dateSelect" update="eventDetails"
-											oncomplete="PF('dialogo').show();" />
-										<p:ajax event="eventSelect"
-											listener="#{agendaController.eventoSelecionado}"
-											update="eventDetails" oncomplete="PF('dialogo').show();" />
-
-									</p:schedule>
-								</h:panelGrid>
-
-								<p:dialog widgetVar="dialogo" header="Detalhes do Atendimento"
-									closable="true" draggable="false" modal="true"
-									resizable="false">
-									<h:panelGrid id="eventDetails" columns="2">
-
-										<p:outputLabel value="Descricão" />
-										<p:inputText value="#{agendaController.agenda.nome}" />
-
-										<p:outputLabel value="Data Atendimento" />
-										<p:inputText value="#{agendaController.agenda.atendimento}" />
-
-										<p:outputLabel value="Paciente" />
-										<p:inputText value="#{agendaController.paciente.nome}" />
-
-										<p:outputLabel value="Medico" />
-										<p:inputText value="#{agendaController.medico.nome}" />
-
-									</h:panelGrid>
-
-								</p:dialog>
-
-							</h:form>
-
-						</p:dialog>
-
 					</p:tab>
 				</p:accordionPanel>
-			</h:form>
-		</p:panel>
 
+				<p:dialog header="Listagem de Medicos" widgetVar="listagem"
+					height="300" width="90%" modal="true" resizable="true">
+
+					<p:outputLabel value="Nome: " />
+					<p:inputText id="itFiltro" value="#{pacienteController.filtro}" />
+					<p:commandButton value="Pesquisar"
+						actionListener="#{pacienteController.pesquisarMed}"
+						process="@this itFiltro" update="dtListagem" />
+					<br />
+					<div class="ui-datatable"></div>
+					<p:dataTable id="dtListagem" var="entity"
+						value="#{pacienteController.listaMedico}">
+						<p:column headerText="Id">
+							<h:outputText value="#{entity.id}" />
+						</p:column>
+
+						<p:column headerText="Nome">
+							<h:outputText value="#{entity.nome}" />
+						</p:column>
+
+						<p:column headerText="Especialiade(s)">
+							<p:outputLabel id="dtListagem"
+								value="#{pacienteController.retornarEspecialidadesPorId(entity.id)}" />
+						</p:column>
+
+						<p:column headerText="Ação">
+							<p:commandLink value="Selecionar"
+								actionListener="#{pacienteController.editarMed(entity.id)}"
+								process="@this" update="@form" resetValues="true" />
+						</p:column>
+
+					</p:dataTable>
+				</p:dialog>
+
+			</h:form>
+
+			<h:form id="agenda">
+
+				<p:dialog header="Agenda medica" widgetVar="AgendaMed" height="50%"
+					width="50%" modal="true" resizable="true">
+
+					<p:growl id="messages" showDetail="true" />
+
+					<h:panelGrid columnClasses="value">
+						<p:schedule id="schedule" value="#{agendaController.agendas}"
+							widgetVar="myschedule">
+
+							<p:ajax event="dateSelect" update="eventDetails"
+								oncomplete="PF('dialogo').show();" />
+							<p:ajax event="eventSelect"
+								listener="#{agendaController.eventoSelecionado}"
+								update="eventDetails" oncomplete="PF('dialogo').show();" />
+
+						</p:schedule>
+					</h:panelGrid>
+				</p:dialog>
+
+				<p:dialog widgetVar="dialogo" header="Detalhes do Atendimento"
+					closable="true" draggable="false" modal="true" resizable="false">
+					<h:panelGrid id="eventDetails" columns="2">
+
+						<p:outputLabel value="Descricão" />
+						<p:inputText value="#{agendaController.agenda.nome}" />
+
+						<p:outputLabel value="Data Atendimento" />
+						<p:inputText value="#{agendaController.agenda.atendimento}" />
+
+						<p:outputLabel value="Paciente" />
+						<p:inputText value="#{agendaController.paciente.nome}" />
+
+						<p:outputLabel value="Medico" />
+						<p:inputText value="#{agendaController.medico.nome}" />
+
+					</h:panelGrid>
+
+				</p:dialog>
+
+			</h:form>
+
+		</p:panel>
 
 	</ui:define>
 </ui:composition>
