--- a/WebContent/agenda.xhtml
+++ b/WebContent/agenda.xhtml
@@ -45,7 +45,8 @@
 					widgetVar="myschedule">
 
 					<p:ajax event="dateSelect" update="eventDetails"
-						oncomplete="PF('dialogo').show();" />
+						oncomplete="PF('dialogo').show();"
+						listener="#{agendaController.onDateSelect}" />
 					<p:ajax event="eventSelect"
 						listener="#{agendaController.eventoSelecionado}"
 						update="eventDetails" oncomplete="PF('dialogo').show();" />
@@ -53,8 +54,8 @@
 				</p:schedule>
 			</h:panelGrid>
 
-			<p:dialog widgetVar="dialogo" header="Detalhes do Atendimento" closable="true"
-				draggable="false" modal="true" resizable="false">
+			<p:dialog widgetVar="dialogo" header="Detalhes do Atendimento"
+				closable="true" draggable="false" modal="true" resizable="false">
 				<p:ajax event="close" update="#{agendaController.limpar()}"></p:ajax>
 				<h:panelGrid id="eventDetails" columns="2">
 
@@ -71,7 +72,7 @@
 					<p:inputText value="#{agendaController.medico.nome}" />
 
 				</h:panelGrid>
-				
+
 			</p:dialog>
 
 		</h:form>
